fixed planet alignment

--- a/main.css
+++ b/main.css
@@ -34,9 +34,6 @@ body {
 	height: 300px;
 	width: 300px;
 	display: inline-block;
-	/*display: inline-flex;
-	flex: wrap;
-	justify-content: center;*/
 	margin: 20px;
 
 }
@@ -56,4 +53,9 @@ body {
 	height: 300px;
 	width: 300px;
 
+}
+
+.btn {
+	margin-top: 20px;
+	
 }
